GoalTracker/force-app/main/default/objects/Pachinko__c/Pachinko__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the rules for Assigning Accounts via Pachinko</description>
    <label>Pachinko Account Assignment</label>
</CustomObject>