GoalTracker/force-app/main/default/objects/Pachinko__c/fields/General_Category__c.field-meta.xml
<CustomField>
    <fullName>General_Category__c</fullName>
    <label>General Category</label>
    <length>64</length>
    <type>Text</type>
</CustomField>