GoalTracker/force-app/main/default/objects/Pachinko__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <length>64</length>
    <type>Text</type>
</CustomField>