GoalTracker/force-app/main/default/objects/Pachinko__c/fields/Specific_Category__c.field-meta.xml
<CustomField>
    <fullName>Specific_Category__c</fullName>
    <label>Specific Category</label>
    <length>64</length>
    <type>Text</type>
</CustomField>