GoalTracker/force-app/main/default/objects/Pachinko__c/listViews/All_Pachinko_Rules.listView-meta.xml
<ListView>
    <fullName>All_Pachinko_Rules</fullName>
    <columns>Rule_Order__c</columns>
    <columns>NAME</columns>
    <columns>Rule__c</columns>
    <columns>General_Category__c</columns>
    <columns>Specific_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pachinko Rules</label>
</ListView>